Handled adsense automatic ads setting

--- a/src/Template/core/views/index.mustache
+++ b/src/Template/core/views/index.mustache
@@ -13,6 +13,7 @@
         {{> seo/bing/validation }}
         {{> seo/google/analytics }}
         {{> seo/google/search_console }}
+        {{> seo/google/adsense_automatic_ads }}
         {{> seo/google/tag_manager_head }}
         {{> seo/facebook/pixel}}
         {{> seo/pinterest/domain_verify}}
