--- a/src/Template/core/views/partials/form/form/checkbox_toggle.mustache
+++ b/src/Template/core/views/partials/form/form/checkbox_toggle.mustache
@@ -1,4 +1,5 @@
 <input
+    id="{{elementId}}{{#short}}_{{short}}{{/short}}"
     type="checkbox"
     autocomplete="off"
     name="{{elementName}}"
