Added stuff for GridEditor Assets

--- a/src/Template/core/views/index.mustache
+++ b/src/Template/core/views/index.mustache
@@ -3,6 +3,7 @@
 <head>
     {{> seo/meta }}
     {{{stylesheet}}}
+    {{{inlinestylesheet}}}
     {{#IS_ADMIN}}
     {{/IS_ADMIN}}
     {{^IS_ADMIN}}
