Added stuff for Layouts fixed bug in form.js

--- a/src/Resources/admin/views/layout_editor.mustache
+++ b/src/Resources/admin/views/layout_editor.mustache
@@ -1,4 +1,2 @@
-in layout_editor.mustahce
-
-
-<div id="myGrid"></div>
+<div id="layout_editor"></div>
+<a href="#" id="layout_editor_button_save" class="btn btn-success float-right">Opslaan</a>
