--- a/src/Template/core/views/partials/form/form/hidden.mustache
+++ b/src/Template/core/views/partials/form/form/hidden.mustache
@@ -1,5 +1,5 @@
 <input
-    id="{{elementId}}{{#short}}_{{short}}{{/short}}"
+    id="{{elementName}}{{#short}}_{{short}}{{/short}}"
     name="{{elementName}}{{#short}}[{{short}}]{{/short}}"
     value="{{elementValue}}"
     type="hidden"
