--- a/src/Resources/admin/views/editForm.mustache
+++ b/src/Resources/admin/views/editForm.mustache
@@ -9,7 +9,10 @@
     <div class="col-xs-12 col-lg-9">
     {{{ adminEditForm }}}
     </div>
-    <div class="col-xs-12 col-lg-3">
-        %MUSTACHE_AVAILABLE_BLOCKS%
+    <div class="col-xs-12 col-lg-3" id="layout_editor_fields">
+        <h4>%MUSTACHE_AVAILABLE_FIELDS%</h4>
+        {{#adminEditItem.availableFields}}
+            <a href="#" class="d-block" id="{{_id}}" >{{name[]}}</a>
+        {{/adminEditItem.availableFields}}
     </div>
 </div>
