--- a/src/Template/core/views/blocks/MainContent/shop_product.mustache
+++ b/src/Template/core/views/blocks/MainContent/shop_product.mustache
@@ -8,11 +8,7 @@
             />
         </div>
         <div class="col-12 col-sm-12 col-md-6 col-lg-5">
-            <header>
-                <h1>
-                    {{currentItem.name[]}}
-                </h1>
-            </header>
+            {{> fields/text/header }}
             {{{currentItem.bodytext[]}}}
 
             {{#currentItem.outOfStock}}
@@ -35,14 +31,8 @@
             {{/currentItem.outOfStock}}
             {{^currentItem.outOfStock}}
                 <div class="d-md-flex justify-content-between align-items-center">
-                    <div class="container-product-price text-center text-lg-left">
-                        {{{SHOP_CURRENCY_BASE}}} {{currentItem.price_sale}}
-                    </div>
-                    <div class="container-addtocart">
-                        {{#currentItem.addtocart}}
-                            {{> shop/addToCart}}
-                        {{/currentItem.addtocart}}
-                    </div>
+                    {{> fields/shopprice/shopSalePrice}}
+                    {{> fields/shopaddtocart/shopAddToCart}}
                 </div>
             {{/currentItem.outOfStock}}
             {{#SHOP_TEXT_USP}}
