--- a/src/Template/core/views/partials/fields/image/single_image_zoom.mustache
+++ b/src/Template/core/views/partials/fields/image/single_image_zoom.mustache
@@ -1,5 +1,7 @@
-<img
-    class="img-fluid image-add-zoom"
-    src="/uploads/{{ACCOUNT}}/{{currentItem.image}}?h=500"
-    alt="{{currentItem.name[]}}"
-/>
+{{#currentItem.image}}
+    <img
+        class="img-fluid image-add-zoom"
+        src="/uploads/{{ACCOUNT}}/{{currentItem.image}}?h=500"
+        alt="{{currentItem.name[]}}"
+    />
+{{/currentItem.image}}currentItem.addtocart}}
