Added AssetsEvents Render a layout instead of mustache template

--- a/src/Template/core/views/partials/fields/image/singleImageZoom.mustache
+++ b/src/Template/core/views/partials/fields/image/singleImageZoom.mustache
@@ -4,4 +4,4 @@
         src="/uploads/{{ACCOUNT}}/{{currentItem.image}}?h=500"
         alt="{{currentItem.name[]}}"
     />
-{{/currentItem.image}}currentItem.addtocart}}
+{{/currentItem.image}}
