Added Block render listener

--- a/src/Template/core/views/blocks/FormBuilder/main_content.mustache
+++ b/src/Template/core/views/blocks/FormBuilder/main_content.mustache
@@ -1,7 +1,4 @@
-<section class="row">
-    <article class="col-12 col-lg-8 offset-lg-2 col-xl-6 offset-xl-3">
-        {{{block.introtext[]}}}
-        {{{block.form}}}
-    </article>
-</section>
-
+{{> block/main_content_start}}
+    {{{block.introtext[]}}}
+    {{{block.form}}}
+{{> block/main_content_end}}
