--- a/src/Template/core/scss/mixins/_menu.scss
+++ b/src/Template/core/scss/mixins/_menu.scss
@@ -50,7 +50,7 @@
                     display: block;
                     font-size: 1.3em;
                     line-height: 200%;
-                    text-indent: 12px;
+                    padding: 0px 12px;
                     &:before {
                         font-size: 15px;
                         margin-right: 15px;
