Renamed card-block to card-body

--- a/src/Template/core/views/blocks/MainContent/shop_category_overview.mustache
+++ b/src/Template/core/views/blocks/MainContent/shop_category_overview.mustache
@@ -15,7 +15,7 @@
                         />
                     </a>
                 {{/image}}
-                <div class="card-block">
+                <div class="card-body">
                     <h4 class="card-title">
                         <a href="{{slug[]}}" >
                             {{name[]}}
