--- a/src/Template/core/views/partials/bootstrap/card.mustache
+++ b/src/Template/core/views/partials/bootstrap/card.mustache
@@ -29,7 +29,7 @@
         {{/block.imageFullWidth}}
     {{/image}}
     {{#block.imageFullWidth}}
-        <a href="{{slug[]}}" class="card-block">
+        <a href="{{slug[]}}" class="card-body">
             <h4 class="card-title">
                 {{name[]}}
                 {{#subTitle}}
@@ -49,7 +49,7 @@
         </a>
     {{/block.imageFullWidth}}
     {{^block.imageFullWidth}}
-        <div class="card-block">
+        <div class="card-body">
             <a href="{{slug[]}}">
                 <h4 class="card-title">{{name[]}}</h4>
             </a>
