--- a/src/Template/core/views/partials/shop/clothing_small_lazyload.mustache
+++ b/src/Template/core/views/partials/shop/clothing_small_lazyload.mustache
@@ -20,7 +20,7 @@
             />
         </noscript>
     </a>
-    <div class="card-block">
+    <div class="card-body">
         <h5 class="card-title text-center">
             <a
                 href="{{BASE_URI}}{{slug[]}}"
