--- a/src/Template/core/views/blocks/Itemlist/shop_category_overview.mustache
+++ b/src/Template/core/views/blocks/Itemlist/shop_category_overview.mustache
@@ -8,7 +8,7 @@
                         alt="{{name[]}}"
                     />
                 </a>
-                <div class="card-block">
+                <div class="card-body">
                     <h4 class="card-title">
                         <a href="{{slug[]}}" >
                             {{name[]}}
