--- a/src/Template/core/views/partials/shop/beer_small.mustache
+++ b/src/Template/core/views/partials/shop/beer_small.mustache
@@ -13,7 +13,7 @@
             itemprop="image"
         />
     </a>
-    <div class="card-block">
+    <div class="card-body">
         <h5 class="card-title text-center">
             <a
                 href="{{slug[]}}"
