--- a/src/Template/core/views/partials/seo/meta.mustache
+++ b/src/Template/core/views/partials/seo/meta.mustache
@@ -12,5 +12,5 @@
     <meta name="generator" content="{{WEBSITE_DEFAULT_NAME}}"/>
     <meta name="author" content="{{WEBSITE_DEFAULT_NAME}}">
 {{/WEBSITE_DEFAULT_NAME}}
-<link rel="canonical" href="{{BASE_URI}}{{currentItem.slug[]}}" />
+<link rel="canonical" href="{{BASE_URI}}{{currentItem.slug[]}}{{#PAGE_NUMBER}}?page={{PAGE_NUMBER}}{{/PAGE_NUMBER}}" />
 <title>{{#currentItem.seoTitle[]}}{{currentItem.seoTitle[]}}{{/currentItem.seoTitle[]}}{{^currentItem.seoTitle[]}}{{currentItem.name[]}}{{/currentItem.seoTitle[]}}{{#SITE_TITLE_LABEL_MOTTO}} | {{SITE_TITLE_LABEL_MOTTO}}{{/SITE_TITLE_LABEL_MOTTO}}</title>
