--- a/src/Template/core/views/partials/seo/cookieconsent.mustache
+++ b/src/Template/core/views/partials/seo/cookieconsent.mustache
@@ -13,7 +13,7 @@
                     }
                 },
                 "theme": "edgeless",
-                "position": "top",
+                "position": "{{COOKIECONSENT_POSITION}}",
                 "content": {
                     "message": "{{COOKIECONSENT_CONTENT_MESSAGE}}",
                     "dismiss": "{{COOKIECONSENT_CONTENT_DISMISS}}",
