--- a/src/Template/core/views/blocks/Logo/website_name.mustache
+++ b/src/Template/core/views/blocks/Logo/website_name.mustache
@@ -1,13 +1,12 @@
 <div class="container-logo {{block.logoType}}">
-    <a href="{{BASE_URI}}">
-        <h1 class="m-0 p-0">{{WEBSITE_DEFAULT_NAME}}</h1>
+    <a href="{{uri}}">
+        <h1 class="m-0 p-0">{{websiteName}}</h1>
     </a>
     {{#block.displayMotto}}
     <p>
-        <a href="{{BASE_URI}}">
-            {{SITE_LABEL_MOTTO}}
+        <a href="{{uri}}">
+            {{motto}}
         </a>
     </p>
     {{/block.displayMotto}}
 </div>
-
