--- a/src/Template/core/views/blocks/Breadcrumbs/default.mustache
+++ b/src/Template/core/views/blocks/Breadcrumbs/default.mustache
@@ -4,11 +4,11 @@
             <a href="{{BASE_URI}}" class="fa fa-home"></a>
         </li>
         {{#block.items}}
-        <li class="{{_id}} breadcrumb-item" >
-            <a href="{{slug[]}}" >
-                {{name[]}}
-            </a>
-        </li>
+            <li class="{{_id}} breadcrumb-item" >
+                <a href="{{BASE_URI}}{{slug[]}}" >
+                    {{name[]}}
+                </a>
+            </li>
         {{/block.items}}
     </ol>
 {{/block.hasItems}}
