--- a/src/Template/core/views/partials/fields/image/singleImageZoom.mustache
+++ b/src/Template/core/views/partials/fields/image/singleImageZoom.mustache
@@ -1,7 +1,7 @@
 {{#currentItem.image}}
     <img
         class="img-fluid image-add-zoom"
-        src="/uploads/{{ACCOUNT}}/{{currentItem.image}}?h=500"
+        src="{{uploads_uri}}{{currentItem.image}}?h=500"
         alt="{{currentItem.name[]}}"
     />
 {{/currentItem.image}}
