--- a/src/Template/core/views/partials/seo/meta.mustache
+++ b/src/Template/core/views/partials/seo/meta.mustache
@@ -1,6 +1,6 @@
-<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 <base href="{{BASE_URI}}"/>
-<meta http-equiv="content-type" content="text/html; charset=utf-8"/>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 {{#SEO_META_KEYWORDS}}
     <meta name="keywords" content="{{SEO_META_KEYWORDS}}"/>
 {{/SEO_META_KEYWORDS}}
@@ -13,4 +13,4 @@
     <meta name="author" content="{{WEBSITE_DEFAULT_NAME}}">
 {{/WEBSITE_DEFAULT_NAME}}
 <link rel="canonical" href="{{BASE_URI}}{{currentItem.slug[]}}{{#PAGE_NUMBER}}?page={{PAGE_NUMBER}}{{/PAGE_NUMBER}}" />
-<title>{{#currentItem.seoTitle[]}}{{currentItem.seoTitle[]}}{{/currentItem.seoTitle[]}}{{^currentItem.seoTitle[]}}{{currentItem.name[]}}{{/currentItem.seoTitle[]}}{{#SITE_TITLE_LABEL_MOTTO}} | {{SITE_TITLE_LABEL_MOTTO}}{{/SITE_TITLE_LABEL_MOTTO}}</title>
+<title>{{SEO_META_TITLE}}</title>
