--- a/src/Template/core/views/blocks/Logo/mobile.mustache
+++ b/src/Template/core/views/blocks/Logo/mobile.mustache
@@ -6,7 +6,7 @@
             alt="{{WEBSITE_DEFAULT_NAME}}{{#SITE_LABEL_MOTTO}} | {{SITE_LABEL_MOTTO}}{{/SITE_LABEL_MOTTO}}"
         />
     </a>
-    {{#block.displayMotto}}
+    {{#displayMotto}}
         {{#SITE_LABEL_MOTTO}}
         <p itemprop="description">
             <a href="{{BASE_URI}}">
@@ -14,6 +14,6 @@
             </a>
         </p>
         {{/SITE_LABEL_MOTTO}}
-    {{/block.displayMotto}}
+    {{/displayMotto}}
 </div>
 
