Added signal as channel

--- a/src/Template/core/views/blocks/SocialMediaChannels/default.mustache
+++ b/src/Template/core/views/blocks/SocialMediaChannels/default.mustache
@@ -34,4 +34,11 @@
             target="_blank"
         ></a>
     {{/CONTACT_SOCIALMEDIA_LINKEDINURL}}
+    {{#CONTACT_SOCIALMEDIA_SIGNAL}}
+        <a
+                href="https://signal.me/#p/{{CONTACT_SOCIALMEDIA_SIGNAL}}"
+                class="fa fa-comments"
+                target="_blank"
+        ></a>
+    {{/CONTACT_SOCIALMEDIA_SIGNAL}}
 </div>
