Added placeholder tot ext input

--- a/src/Template/core/views/partials/form/form/text.mustache
+++ b/src/Template/core/views/partials/form/form/text.mustache
@@ -15,6 +15,9 @@
     {{#attributes.readonly}}
         readonly="readonly"
     {{/attributes.readonly}}
+    {{#attributes.placeholder}}
+        placeholder="{{attributes.placeholder}}"
+    {{/attributes.placeholder}}
 />
 
 {{#short}}
