--- a/src/Template/core/views/blocks/Itemlist/shop_clothing_overview_two_columns.mustache
+++ b/src/Template/core/views/blocks/Itemlist/shop_clothing_overview_two_columns.mustache
@@ -9,3 +9,6 @@
 </div>
 {{> block/readmore}}
 {{> seo/facebook/viewContent}}
+{{#pagination}}
+    {{> bootstrap/pagination_helper}}
+{{/pagination}}
