--- a/src/Template/core/views/partials/shop/addToCartBlock.mustache
+++ b/src/Template/core/views/partials/shop/addToCartBlock.mustache
@@ -11,7 +11,7 @@
         />
         <button
             type="submit"
-            class="input-group-prepend btn btn-success gaEvent"
+            class="input-group-prepend btn btn-success clickAction"
             data-category="webshop"
             data-action="order-button"
         >
