--- a/src/Template/core/views/partials/shop/addToCart.mustache
+++ b/src/Template/core/views/partials/shop/addToCart.mustache
@@ -3,7 +3,7 @@
         href="{{currentItem.affiliateUrl}}"
         target="_blank"
         rel="nofollow"
-        class="btn btn-success gaEvent"
+        class="btn btn-success clickAction"
         data-category="affiliate"
         data-action="order-button"
     >
@@ -24,7 +24,7 @@
             />
             <button
                 type="submit"
-                class="input-group-prepend btn btn-success gaEvent"
+                class="input-group-prepend btn btn-success clickAction"
                 data-category="webshop"
                 data-action="order-button"
             >
