--- a/src/Template/core/views/blocks/Itemlist/affiliate_category_overview.mustache
+++ b/src/Template/core/views/blocks/Itemlist/affiliate_category_overview.mustache
@@ -10,7 +10,7 @@
                 </a>
                 {{#affiliateUrl}}
                     <div class="card-footer">
-                        <a href="{{BASE_URI}}{{getSlug}}">
+                        <a href="{{BASE_URI}}{{getSlug}}" class="d-none d-sm-block">
                             meer info
                         </a>
                         <a
