--- a/src/Template/core/views/blocks/Logo/website_name.mustache
+++ b/src/Template/core/views/blocks/Logo/website_name.mustache
@@ -1,12 +1,12 @@
 <div class="container-logo {{logoType}}">
     <a href="{{BASE_URI}}">
-        <h1 class="m-0 p-0">{{WEBSITE_DEFAULT_NAME}}</h1>
+        <p class="m-0 p-0" style="color:white">{{WEBSITE_DEFAULT_NAME}}</p>
     </a>
     {{#displayMotto}}
-    <p>
-        <a href="{{BASE_URI}}">
-            {{SITE_LABEL_MOTTO}}
-        </a>
-    </p>
+        <p>
+            <a href="{{BASE_URI}}">
+                {{SITE_LABEL_MOTTO}}
+            </a>
+        </p>
     {{/displayMotto}}
 </div>
