--- a/src/Template/core/views/partials/bootstrap/pagination_helper.mustache
+++ b/src/Template/core/views/partials/bootstrap/pagination_helper.mustache
@@ -1,3 +1,4 @@
+{{#pagination.hasPages}}
 <nav>
     <ul class="pagination justify-content-end">
         <li class="page-item"><div class="page-link">{{pagination.count}} %ADMIN_ITEMS%</div></li>
@@ -24,3 +25,4 @@
         {{/pagination.hasNextPage}}
     </ul>
 </nav>
+{{/pagination.hasPages}}
