--- a/src/Template/core/views/partials/shop/addToCart.mustache
+++ b/src/Template/core/views/partials/shop/addToCart.mustache
@@ -1,11 +1,11 @@
 {{#currentItem.affiliateUrl}}
     <a
-        href="{{currentItem.affiliateUrl}}"
-        target="_blank"
-        rel="nofollow"
-        class="btn btn-success clickAction"
-        data-category="affiliate"
-        data-action="order-button"
+            href="{{currentItem.affiliateUrl}}"
+            target="_blank"
+            rel="nofollow"
+            class="btn btn-success clickAction"
+            data-category="affiliate"
+            data-action="order-button"
     >
         %SHOP_TO_ORDER%
     </a>
@@ -14,28 +14,28 @@
     <form action="/shop/cart/addtocart/">
         <div class="input-group">
             <input
-                id="quantity"
-                class="form-control"
-                type="number"
-                name="quantity"
-                value="1"
-                min="1"
-                {{#stock}}max="{{stock}}"{{/stock}}
+                    id="quantity"
+                    class="form-control"
+                    type="number"
+                    name="quantity"
+                    value="1"
+                    min="1"
+                    {{#stock}}max="{{stock}}"{{/stock}}
             />
             <button
-                type="submit"
-                class="input-group-prepend btn btn-success clickAction"
-                data-category="webshop"
-                data-action="order-button"
+                    type="submit"
+                    class="input-group-prepend btn btn-success"
+                    data-category="webshop"
+                    data-action="order-button"
             >
                 %SHOP_ADDTOCART%
             </button>
         </div>
-        <input type="hidden" name="itemId" value="{{currentItem._id}}" />
-        <input id="variation" type="hidden" name="variation" value="" />
+        <input type="hidden" name="itemId" value="{{currentItem.getId}}"/>
+        <input id="variation" type="hidden" name="variation" value=""/>
         {{#currentItem.variations}}
             {{#stock}}
-                <input id="stock_{{sku}}" type="hidden" name="stock_{{sku}}" value="{{stock}}" />
+                <input id="stock_{{sku}}" type="hidden" name="stock_{{sku}}" value="{{stock}}"/>
             {{/stock}}
         {{/currentItem.variations}}
     </form>
