--- a/src/Template/core/views/blocks/ShopCheckoutSummary/default.mustache
+++ b/src/Template/core/views/blocks/ShopCheckoutSummary/default.mustache
@@ -18,7 +18,7 @@
             {{#block.shiptoAddresses.companyName}}{{block.shiptoAddresses.companyName}}<br />{{/block.shiptoAddresses.companyName}}
             {{block.shiptoAddresses.street}} {{block.shiptoAddresses.houseNumber}}<br />
             {{block.shiptoAddresses.zip}} {{block.shiptoAddresses.city}}<br />
-            {{block.shiptoAddresses.countryName}}<br />
+            {{block.shiptoAddresses.countryName[]}}<br />
             {{block.shiptoAddresses.phoneNumber}}
         </blockquote>
     </div>
