--- a/src/Template/core/views/blocks/ShopCheckoutInformation/default.mustache
+++ b/src/Template/core/views/blocks/ShopCheckoutInformation/default.mustache
@@ -9,11 +9,12 @@
                 </a>
             </h3>
             <blockquote>
-                {{block.user.firstName}}{{#block.user.middleName}} {{block.user.middleName}}{{/block.user.middleName}} {{block.user.lastName}}<br />
-                {{#block.shopper.companyName}}{{block.shopper.companyName}}<br />{{/block.shopper.companyName}}
-                {{block.user.street}} {{block.user.houseNumber}}<br />
-                {{block.user.zip}} {{block.user.city}}<br />
-                {{block.user.countryName}}<br />
+                {{block.user.firstName}}{{#block.user.middleName}} {{block.user.middleName}}{{/block.user.middleName}} {{block.user.lastName}}
+                <br/>
+                {{#block.shopper.companyName}}{{block.shopper.companyName}}<br/>{{/block.shopper.companyName}}
+                {{block.user.street}} {{block.user.houseNumber}}<br/>
+                {{block.user.zip}} {{block.user.city}}<br/>
+                {{block.user.countryName}}<br/>
                 {{block.user.phoneNumber}}
             </blockquote>
         </div>
@@ -28,16 +29,16 @@
                 %SHOP_ADDRESS_SHIPPING_SAME_AS_INVOICE%
             </div>
             {{#block.shiptoAddresses}}
-                <div data-id="{{_id}}" class="btn btn-info btn-block text-left">
+                <div data-id="{{getId}}" class="btn btn-info btn-block text-left">
                     {{firstName}}{{#middleName}} {{middleName}}{{/middleName}} {{lastName}}
-                    <a href="shop/shopper/editShipTo/?id={{_id}}" class="openmodal float-right">
-                        <i class="fa fa-edit"></i>
+                    <a href="shop/shopper/editShipTo/?id={{getId}}" class="openmodal float-right">
+                    <i class="fa fa-edit"></i>
                     </a>
                 </div>
-                <blockquote id="shipto-{{_id}}">
-                    {{street}} {{houseNumber}}<br />
-                    {{zip}} {{city}}<br />
-                    {{countryName}}<br />
+                <blockquote id="shipto-{{getId}}">
+                    {{street}} {{houseNumber}}<br/>
+                    {{zip}} {{city}}<br/>
+                    {{countryName[]}}<br/>
                     {{phoneNumber}}
                 </blockquote>
             {{/block.shiptoAddresses}}
@@ -52,7 +53,7 @@
             {{{block.loginForm}}}
         </div>
         <div class="col-12 hidden-sm-up d-sm-none">
-            <hr />
+            <hr/>
         </div>
         <div class="col-12 col-sm-6">
             <h2>%SHOP_CUSTOMER_NEW%</h2>
