--- a/src/Template/core/views/partials/shop/clothing_small.mustache
+++ b/src/Template/core/views/partials/shop/clothing_small.mustache
@@ -1,25 +1,19 @@
 <div
-    class="{{_id}} col-12 col-lg-6 col-xl-4 card product-card"
-    itemprop="itemListElement" itemscope itemtype="http://schema.org/Product"
+        class="{{_id}} col-12 col-lg-6 col-xl-4 card product-card"
+        itemprop="itemListElement" itemscope itemtype="http://schema.org/Product"
 >
-    <a
-        class="card-img-top text-center openmodal"
-        href="{{BASE_URI}}{{slug[]}}"
-        itemprop="url"
-    >
+    <meta itemprop="name" content="{{getNameField}}" />
+    <meta itemprop="url" content="{{BASE_URI}}{{getSlug}}" />
+    <meta itemprop="image" content="{{UPLOAD_URI}}{{firstImage}}?h=250" />
+    <a  class="card-img-top text-center openmodal" href="{{BASE_URI}}{{slug[]}}">
         <img
-            src="{{UPLOAD_URI}}{{firstImage}}?h=250"
-            alt="{{name[]}} | {{WEBSITE_DEFAULT_NAME}}"
-            itemprop="image"
+                src="{{UPLOAD_URI}}{{firstImage}}?h=250"
+                alt="{{name[]}} | {{WEBSITE_DEFAULT_NAME}}"
         />
     </a>
     <div class="card-body">
         <h5 class="card-title text-center">
-            <a
-                href="{{BASE_URI}}{{slug[]}}"
-                itemprop="name"
-                class="openmodal"
-            >
+            <a href="{{BASE_URI}}{{slug[]}}" class="openmodal">
                 {{name[]}}
             </a>
         </h5>
@@ -29,10 +23,10 @@
         </div>
         <div class="float-left d-flex justify-content-start container-colors">
             {{#variationsTemplate.colors}}
-            <div
-                style="background-color:{{color}};"
-                data-image="{{UPLOAD_URI}}/{{image}}?h=250"
-            ></div>
+                <div
+                        style="background-color:{{color}};"
+                        data-image="{{UPLOAD_URI}}/{{image}}?h=250"
+                ></div>
             {{/variationsTemplate.colors}}
         </div>
         {{> shop/clothing_small_price}}
@@ -44,8 +38,8 @@
         {{/outOfStock}}
         {{^outOfStock}}
             <a
-                class="float-right view-product w-100 text-center"
-                href="{{BASE_URI}}{{slug[]}}"
+                    class="float-right view-product w-100 text-center"
+                    href="{{BASE_URI}}{{slug[]}}"
             >
                 %SHOP_VIEW_PRODUCT% <i class="fa fa-chevron-right"></i>
             </a>
